fixed overlapping revbar

--- a/dashboard/src/index.css
+++ b/dashboard/src/index.css
@@ -8,6 +8,11 @@ body {
   width: 100%;
 }
 
+html {
+    height: 100%;
+    width: 100%;
+}
+
 .centered{
     position: fixed;
     top: 50%;
@@ -18,7 +23,7 @@ body {
 canvas {
     border: 1px solid white;
     position: absolute;
-    width: 10%;
+    width: 50%;
     height: 100%;
 }
 
